# diy-synth

./: .gitignore  .gitmodules  README.md  notes.md
attenuverter/attenuverter/: attenuverter.kicad_prl  attenuverter.kicad_pro  attenuverter.kicad_sch
cvutils/: .notes.md.swo
cvutils/firmware/: CMakeLists.txt
cvutils/firmware/scripts/: program.sh
cvutils/firmware/src/: cv-utils.c
eurorack-libs/Alpha_Pots.pretty/: Potentiometer_Alpha_RV09AF-40-20K_Single_Vertical.kicad_mod  SR2612F011221R0BD8N.kicad_mod
eurorack-libs/Eurorack_Panel_Designs.pretty/: 3.5MM_Jack_Panel_Input_Plated.kicad_mod  3.5MM_Jack_Panel_Output_Plated.kicad_mod  Alpha_Plastic_Pot_Plated.kicad_mod  Eurorack_Panel_2HP.kicad_mod  Eurorack_Panel_4HP.kicad_mod
eurorack-libs/lm1117.pretty/: TO-220-3_Horizontal_TabDown-TabPad.kicad_mod
keyboard/firmware/: CMakeLists.txt
lfo/lfo/: lfo.kicad_prl  lfo.kicad_pro  lfo.kicad_sch
lfo/lfo-panel/: lfo-panel.kicad_prl  lfo-panel.kicad_pro
mixer/: .gitignore
mixer/mixer/: fp-lib-table  mixer.csv  mixer.kicad_pcb  mixer.kicad_prl  mixer.kicad_pro  mixer.kicad_sch  mixer.xml
mixer/mixer-panel/: fp-lib-table  mixer-panel.kicad_pcb  mixer-panel.kicad_prl  mixer-panel.kicad_pro
mortiz-vco/vco/: vco.kicad_pro
multiple/multiple/: fp-lib-table
multiple/multiple-panel/: multiple-panel.kicad_pcb  multiple-panel.kicad_prl
noise/noise-panel/: fp-lib-table  noise-panel.kicad_pcb  noise-panel.kicad_prl  noise-panel.kicad_pro
power-supply/: fp-lib-table  power-supply.kicad_pcb  power-supply.kicad_sch
quantizer/: .notes.md.swp  notes.md
(+43 files in other folders)
